--- a/Random Joke Generator/index.html
+++ b/Random Joke Generator/index.html
@@ -10,7 +10,7 @@
    <div class="bg1"></div>
    <div class="bg2"></div>
    <div class="jokeBox">
-    <img src="laughing cat.png" alt="">
+    <img src="assets/laughing cat.png" alt="">
     <div id="joke"></div>
     <button>Get Jokes</button>
     </div>
